--- a/app/views/documents/_documents.html.erb
+++ b/app/views/documents/_documents.html.erb
@@ -15,10 +15,15 @@
         <%= link_to document.document_content_type, document.document.url %></td>
       <td><%= document.created_at%></td>
 
-      <td><%= link_to image_tag("delete.png", :title => "Delete", :width => "24px", :height => "24px"), document, :method => :delete, :data => { :confirm => 'Are you sure?' }, :remote => true %></td>
+      <td><%= link_to  "Delete", document, :method => :delete, :data => { :confirm => 'Are you sure?' }, :remote => true, :class => "btn btn-mini btn-danger" %></td>
 
     </tr>
 
   <% end %>
+    <tr>
+      <td colspan="4">
+        <%= will_paginate @documents %>
+      </td>
+    </tr>
 
 </table>
