--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,12 +1,18 @@
-<%= render :partial => "layouts/tabs_for_settings" %>
+<%= render "layouts/tabs_for_settings" %>
 <table class =" table-striped">
   <tr>
     <th colspan="7" style="background:#666; color: #FFF; font-weight: bold;">Items List</th>
   </tr>
 
-   <% @items.each do |item| %>
+  <% @items.each do |item| %>
     <tr>
       <td><%= item.name %></td>
     </tr>
-    <% end %>
+    
+  <% end %>
+    <tr>
+      <td>
+        <%= will_paginate %>
+      </td>
+    </tr>
 </table>
