--- a/app/views/jobsites/index.html.erb
+++ b/app/views/jobsites/index.html.erb
@@ -21,10 +21,11 @@
         <td><%= link_to 'Edit', edit_jobsite_path(jobsite), :class => "btn btn-mini btn-primary" %></td>
       </tr>
     <% end %>
-     
+    <tr>
+      <td colspan="5">
+        <%= will_paginate @jobsites %>
+      </td>
+    </tr>
   </table>
 </table>
 
- <tr>
-     <td colspan="4"><%= will_paginate @jobsites %></td>
-</tr>
