--- a/app/views/roles/_form.html.erb
+++ b/app/views/roles/_form.html.erb
@@ -57,7 +57,7 @@
     </tr>
 
     <tr>
-      <td colspan="2"><%= f.submit "Save", :class =>  "btn-success" %></td>
+      <td colspan="2"><%= f.submit "Save", :class =>  " btn btn-small btn-success" %></td>
     </tr>
     <tr><td>&nbsp;</td></tr>
   </table>
