--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -59,7 +59,7 @@
       </td>
     </tr>
     <tr>
-      <td><%= f.submit "Save", :style => "padding: 5px 10px;" %></td>
+      <td><%= f.submit "Save", :style => "padding: 5px 10px;" ,:class => "btn btn-small btn-success"%></td>
     </tr>
   </table>
 <% end %>
