--- a/app/views/jobtimes/index.html.erb
+++ b/app/views/jobtimes/index.html.erb
@@ -37,6 +37,11 @@
       <td><%= jobtime.service != nil ? Item.find(jobtime.service).name : '' %></td>
     </tr>
   <% end %>
+    <tr>
+      <td colspan ="5">
+        <%= will_paginate %>
+      </td>
+    </tr>
 
 </table>
 
