--- a/app/views/users/_users.html.erb
+++ b/app/views/users/_users.html.erb
@@ -17,11 +17,16 @@
         <td><%= user.accounting_name %></td>
         <td><%= role.present? ? role.roll : "" %></td>
         <td>
-          <%= link_to image_tag("edit.png", :title => "Edit", :width => "24px", :height => "24px"), edit_user_path(user), :remote => true %> |
-          <%= link_to image_tag("delete.png", :title => "Delete", :width => "24px", :height => "24px"), user, :method => :delete, :data => { :confirm => 'Are you sure?' }, :remote => true %>
+          <%= link_to "Edit", edit_user_path(user), :remote => true, :class => "btn btn-mini btn-primary" %> |
+          <%= link_to "Delete", user, :method => :delete, :data => { :confirm => 'Are you sure?' }, :remote => true, :class => "btn btn-mini btn-danger" %>
         </td>
       </tr>
     <% end %>
+      <tr>
+        <td colspan ="5">
+          <%= will_paginate %>
+        </td>
+      </tr>
 
   </table>
 <% end %>
