--- a/app/views/jobs/edit.html.erb
+++ b/app/views/jobs/edit.html.erb
@@ -1,5 +1,6 @@
 <%= gmaps4rails(@json) %><br/><br/>
-<br/>
-<%= render '/layouts/job_with_action' %>
+<br/><br/>
+<%= render '/layouts/customer_with_action' %>
+<%= render :partial => 'jobs'  %>
 <%= render '/layouts/tab_panel_for_job' %>
 <%= render 'form' %>
