--- a/app/views/jobtimes/index.html.erb
+++ b/app/views/jobtimes/index.html.erb
@@ -50,8 +50,9 @@
     var hours = 0;
     var minutes = 0;
     var seconds = 0;
-  
+
   function update() {
+    
     seconds++;
 
     if(seconds>=60){
@@ -94,13 +95,15 @@
       data:{
         start_time:start_time,
         end_time:end_time,
-        service:service
+        service:service,
+        hours:hours,
+        minutes:minutes,
+        seconds:seconds
       },
       method:'POST',
       success:function(data){}
     });
   }
-
 </script>
 
 
