--- a/app/assets/stylesheets/gmaps4rails_1.css
+++ b/app/assets/stylesheets/gmaps4rails_1.css
@@ -6,15 +6,15 @@
   -webkit-box-shadow: rgba(64, 64, 64, 0.5) 0 2px 5px;
   -moz-box-shadow: rgba(64, 64, 64, 0.5) 0 2px 5px;
   box-shadow: rgba(64, 64, 64, 0.1) 0 2px 5px;
-  width: 200px;
-  height: 200px;
-  float: right;
-  margin:auto
-}
+  width: 500px;
+  height: 400px;
+  float: none;
+  margin: 5px 0 0 100px;
+  }
 
 .gmaps4rails_map {
-  width: 800px;
-  height: 400px;
+  width: 100%;
+  height: 100%;
 }
 
 .bing_map {
@@ -26,8 +26,10 @@
    border:#555555 2px solid;
 }
 
+
 #map{
-    width: 200px;
-    height: 200px;
-    float: right;
+    width: 500px;
+    height: 400px;
+    float: none;
 }
+
