--- a/app/views/jobs/edit.html.erb
+++ b/app/views/jobs/edit.html.erb
@@ -1,4 +1,4 @@
-<%= render '/layouts/customer_with_action' %>
+<%= render :partial => '/layouts/customer_with_action' %>
 <%= render :partial => 'jobs'  %>
-<%= render '/layouts/tab_panel_for_job' %>
-<%= render 'form' %>
+<%= render :partial => '/layouts/tab_panel_for_job' %>
+<%= render :partial => 'form' %>
