--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
+    <meta charset="utf-8" />
     <title>SMO</title>
     <%= stylesheet_link_tag    "application","datepicker", :media => "all" %>
-    <%= stylesheet_link_tag 'gmaps4rails' %>
+    <%= stylesheet_link_tag 'gmaps4rails', "http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" %>
     <%= javascript_include_tag "application","autocomplete-rails","bootstrap-datepicker","signature" %>
     <%= csrf_meta_tags %>
   </head>
