--- a/app/views/jobs/edit.html.erb
+++ b/app/views/jobs/edit.html.erb
@@ -1,6 +1,6 @@
 <%= gmaps4rails(@json) %><br/><br/>
 <br/><br/>
 <%= render '/layouts/customer_with_action' %>
-<%= render :partial => 'jobs'  %>
+<%= render 'jobs' %>
 <%= render '/layouts/tab_panel_for_job' %>
 <%= render 'form' %>
