changes in jobs edit

--- a/app/views/layouts/_customer_with_action.html.erb
+++ b/app/views/layouts/_customer_with_action.html.erb
@@ -22,8 +22,12 @@
 
   <% elsif params[:controller]=="jobs" && params[:action]=="edit" %>
     <div id="jobsite">
-      <% @jobsites = Jobsite.find_all_by_customer_id(@customer.id) if !@customer.nil? %>
-      Job Site &nbsp; : <%= select_tag :jobsite_id, options_for_select(["None"]+["All"]+@jobsites.map{|job| [job.name,job.id]}, :selected => session[:jobsite_id]), :onchange => "getJobsiteId(this)" %>
+      <% if @customer == nil %>
+        Job Site &nbsp; : <%= select_tag :jobsite_id, options_for_select(["None"]+["All"]), :onchange => "getJobsiteId(this)" %>
+      <% else %>
+        <% @jobsites = Jobsite.find_all_by_customer_id(@customer.id) %>
+        Job Site &nbsp; : <%= select_tag :jobsite_id, options_for_select(["None"]+["All"]+@jobsites.map{|job| [job.name,job.id]}, :selected => session[:jobsite_id]), :onchange => "getJobsiteId(this)" %>
+      <% end %>
     </div>
   <% else %>
     <div id="jobsite">
@@ -34,8 +38,8 @@
 <%  end %>
 
 <script>
-  $(document).ready(function(){
-    $('#form2_actions').change(function(){
+  $(document).ready(function() {
+    $('#form2_actions').change(function() {
       location.href = $(this).val();
     });
   });
