--- a/app/views/customs/_customs.html.erb
+++ b/app/views/customs/_customs.html.erb
@@ -1,4 +1,3 @@
-<% i=1 %>
 <script>
   $(function() {
     var fir_position;
@@ -17,7 +16,8 @@
           data:{
             pos_1:fir_position,
             pos_2:sec_position,
-            id:cus_id            
+            id:cus_id,
+            tab:<%= params[:tab] %>
           },
           type:'PUT',
           dataType:'script',
@@ -32,22 +32,33 @@
   });
 </script>
 <ul id="sortable" class="droptrue">
+  <h5 style="margin-top:0px; background: #666; color: #FFF; padding:5px;">
+    You can drag and drop the position of contents. Click on content (i.e. label / text) to edit that content
+  </h5>
+  <%=  customs.count==0 ? "No custom fields are created yet. Create your custom fields now!" : '' %>
   <% customs.each do |custom| %>
-    <li class="ui-state-default" data-order="<%= custom.id %>">
-      <%= custom.field ? custom.name : '' %>
-      <br />
-      <% @value = DropdownValue.find_by_custom_id(custom.id) %>
-      <% if custom.field == "Text Box" %>
-        <%= text_field_tag "textField",{}, :value => @value ? @value.drop_value : "" %>
-      <% elsif custom.field == "Dropdown List" %>
-        <%= select_tag "dropdownField", options_for_select(DropdownValue.where("custom_id= '#{custom.id}'").map{|dr| [dr.drop_value,dr.id]}), :style => "width: 436px" %>
-      <% elsif custom.field == "Calendar" %>
-        <%= text_field_tag "calendar#{i}", nil, :value => @value ? @value.drop_value : "", :class => 'data', :placeholder => Date.today %>&nbsp;
-        <%= image_tag "calendar.png", :style => "width: 32px; height: 32px; cursor:pointer;", :id => "calendar_icon#{i}", :class => "datepicker"%>
-      <% else %>
-        ''
-      <% end %>
+    <li class="ui-state-default" data-order="<%= custom.id %>" id="li<%= custom.id %>">
+      <span id="label<%= custom.id %>">
+        <%= label_tag custom.name, nil, :id=> "label#{custom.id}", :onclick => "inplace_edit(#{custom.id}, 'label');" %>
+      </span>
+      <div id="custom_field_updation_<%= custom.id %>">
+        <%= render :partial => 'customs/replace_dropdown',:locals => {:custom => custom} %>
+      </div>
     </li>
-    <% i=i+1 %>
   <% end %>
 </ul>
+
+<script>
+  function show_edit_form(custom_id,value_id){
+    $.ajax({
+      url:'/customs/get_dropdown_values',
+      data:{
+        custom_id:custom_id,
+        dropdown_id:value_id
+      },
+      type:'GET',
+      dataType:'script',
+      success:function(data){}
+    });
+  }
+</script>
