jobsite and customer action for job edit

--- a/app/views/jobs/_jobs.html.erb
+++ b/app/views/jobs/_jobs.html.erb
@@ -1,16 +1,35 @@
-<p><span style = "color:#0044cc; font-weight: bold;"> Job # : <%= params[:controller] == "jobs" && params[:action] == "new" ? '' : session[:job_id] %>  </span></p>
-<div style="width:435px; font-weight: bold;">
-  <p>
-    <% if @customer == nil %>
-      <span style="color:red">Please select customer for this job !</span><br/>
+<%= form_for "form1" do |f|%>
+  <% if params[:controller]=="customers" && (params[:action]=="new" || params[:action]=="index" ) %>
+
+  <% elsif params[:controller]=="customers" && params[:action]=="edit"  %>
+    Customer :
+    <%= f.select :customers, options_for_select(["All"]+current_login.customers.map{|customer| [customer.company_name, customer.id]}, :selected => ( params[:cust_id] ? params[:cust_id] : session[:customer_id]) ), {}, :onchange => "getShowJobsite(this);" %>
+  <% else %>
+    Customer :
+    <%= f.select :customers, options_for_select(["All"]+current_login.customers.map{|customer| [customer.company_name, customer.id]}, :selected => ( params[:cust_id] ? params[:cust_id] : session[:customer_id]) ), {}, :onchange => "getShowJobsite(this);" %>
+  <% end %>
+
+  <%= f.select :actions, options_for_select([["Actions", ""], ["Add Customer", new_customer_path],
+      ["Add Job Site", new_jobsite_path] ,["Add Job", new_job_path] , ["Add Note", notes_path(:type => "Customer")], ["Add Contact", new_contact_path],
+      ["Add Document", documents_path(:type => "Customer")]]) %>
+
+
+  <br />
+  <% if params[:controller]=="customers" && (params[:action]=="new" || params[:action]=="index") %>
+
+  <% elsif params[:controller]=="jobsites" && (params[:action]=="index"  || params[:action]=="edit") %>
+
     <% else %>
-      <%=  "Customer : " + @customer.company_name + ", " + @customer.address1 + ", " + @customer.city + ", " + @customer.state + ", " + @customer.zip.to_s %>
-    <% end %>
-  </p>
-  <p>
-    <% if @jobsite == nil %>
-    <% else %>
-      <%= "Job Site : " + @jobsite.name + ", " + @jobsite.city + ", " + @jobsite.state + ", " + @jobsite.zip %>
-    <% end %>
-  </p>
-</div>
+    <div id="jobsite123">
+      <% @jobsites = Jobsite.find_all_by_customer_id(session[:customer_id]) %>
+      Job Site &nbsp; : <%= select_tag :jobsite_id, options_for_select(["None"]+["All"]+@jobsites.map{|job| [job.name,job.id]}, :selected => session[:jobsite_id]), :onchange => "getJobsitesId(this)" %>
+    </div>
+  <% end %>
+<%  end %>
+
+
+  <p><span style = "color:#0044cc; font-weight: bold;"> Job # : <%= params[:controller] == "jobs" && params[:action] == "new" ? '' : session[:job_id] %>  </span></p>
+
+  <div id="display_customer_and_jobsite">
+      <%= render :partial => 'display_customer_and_jobsite' %>
+  </div>
