--- a/app/views/jobs/_form.html.erb
+++ b/app/views/jobs/_form.html.erb
@@ -37,7 +37,7 @@
   </div>
   <div class="field">
     <%= f.label :status %>
-    <%= f.select :status, options_for_select([["Waiting for parts", "Waiting"]]) %>
+    <%= f.select :status, options_for_select([["waiting"]]) %>
   </div>
   <div class="field">
     <%= label_tag :job_contact %>
