--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -12,38 +12,6 @@
   <% end %>
 </div>
 
-
-<table class="table">
-  <table class="table table-striped">
-    <tr>
-      <th colspan="8">
-        <%= link_to "Add New Job", new_job_path %>
-      </th>
-    </tr>
-    <tr>
-      <th>Reference no</th>
-      <th>Date</th>
-      <th>Status</th>
-      <th>Summary</th>
-      <th colspan="3">Action</th>
-    </tr>
-
-    <% @jobs.each do |job| %>
-      <tr>
-        <td><%= link_to  job.reference_no, edit_job_path(job) %></td>
-        <td><%= job.due_date %></td>
-        <td><%= job.status %></td>
-        <td><%= job.summary %></td>
-
-        <td colspan="3">
-          <%= link_to "Delete", job, method: :delete, data: { confirm: 'Are you sure?' }, :class => "btn btn-mini btn-danger" %>
-        </td>
-      </tr>
-    <% end %>
-    <tr>
-      <td colspan="5">
-        <%= will_paginate @jobs %>
-      </td>
-    </tr>
-  </table>
-</table>
+<div id="jobs_all">
+  <%= render :partial => 'all' %>
+</div>
