--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,7 +44,7 @@
         </div>
       </div>
     </div>
-    <div class="container">
+    <div class="container" style="padding-bottom:50px;">
       <br/> <br/> <br/>
       <% if notice %>
         <div class="alert alert-info" style="margin-top: 0px;">
