--- a/app/views/jobs/edit.html.erb
+++ b/app/views/jobs/edit.html.erb
@@ -1,3 +1,5 @@
+<%= render '/layouts/timer' %>
+
 <%= render :partial => 'jobs'  %>
 <%= render :partial => '/layouts/tab_panel_for_job' %>
 <%= render :partial => 'form' %>
